@@ -14,6 +14,7 @@ Verilator 5.017 devel
 **Minor:**
 
 * Add trace() API even when Verilated without --trace (#4462). [phelter]
+* Add warning on interface instantiation without parens (#4094). [Gökçe Aydos]
 * Support randc (#4349).
 * Support resizing function call inout arguments (#4467).
 
